[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t1000"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
    "pyperclip",
    "python-dotenv",
    "google-genai",
    "openai",
    "dotenv==0.9.9",
    "pynput==1.8.1"
]

[project.scripts]
t1000 = "main:main"
